# portfoliotracker

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
src/portfolio/: __main__.py
src/portfolio/core/: bitcoin_fetcher.py  engine.py  exceptions.py  fetcher.py  models.py  reader.py  settings.py
src/portfolio/ui/tui/: app.py  portfolio.tcss  widgets.py
tests/unit/: test_fetcher.py  test_models.py
